# servant-intro

./: README.md  docs.md  servant-intro.cabal  stack.yaml  swagger.json
app/: Main.hs
src/: API.hs  Book.hs  Client.hs  Docs.hs  Server.hs  Utils.hs
test/: Spec.hs
