name:                servant-intro
version:             0.1.0.0
license-file:        LICENSE
author:              Catherine Galkina
maintainer:          catherine.galkina@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Book
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , either
  default-language:    Haskell2010

executable servant-intro-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-intro
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

