name:                servant-intro
version:             0.1.0.0
license-file:        LICENSE
author:              Catherine Galkina
maintainer:          catherine.galkina@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:
  swagger.json

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Book
                     , Server
                     , Client
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , servant
                     , servant-server
                     , servant-client
                     , servant-swagger
                     , servant-swagger-ui
                     , generics-sop
                     , mtl
                     , split
                     , text
                     , transformers
                     , http-client
                     , swagger2
                     , lens
                     , QuickCheck
  default-language:    Haskell2010

executable servant-intro-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-intro
                     , servant-server
                     , servant-swagger-ui
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base  == 4.*
                  , aeson
                  , bytestring
                  , hspec
                  , text
                  , servant-swagger
                  , servant-intro
  default-language: Haskell2010

